build.sbtを整えた。 `sbt verboseServiceIdl/compile` は通る。